[fix] text overlap issue when length of title exceed original height

--- a/src/stylesheets/components/_card.scss
+++ b/src/stylesheets/components/_card.scss
@@ -144,7 +144,6 @@ $new_skill-text-color: #fdcaad;
         }
 
         .title {
-            height: 20px;
             margin: 20px;
         }
 
